--- a/TournamentTracker/TrackerUI/App.config
+++ b/TournamentTracker/TrackerUI/App.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  
+  <appSettings>
+    <add key="filePath" value ="C:\data\TournamentTracker"/>
+  </appSettings>
+  
   <connectionStrings>
     <!-- If using username and password then ensure that user has access only to run stored procedures for data security reasons -->
     <!-- In the below example we are using Trusted Connection that uses Windows Authentication with SQL Server -->
     <!-- . in Server takes the default MSSQLSERVER Instance -->
     <add name="Tournaments" connectionString="Server=.;Database=Tournaments;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  
 </configuration>
