--- a/TournamentTracker/TrackerUI/App.config
+++ b/TournamentTracker/TrackerUI/App.config
@@ -3,6 +3,7 @@
   
   <appSettings>
     <add key="filePath" value ="C:\data\TournamentTracker"/>
+    <add key="greaterWins" value ="1"/>
   </appSettings>
   
   <connectionStrings>
