--- a/TournamentTracker/TrackerUI/App.config
+++ b/TournamentTracker/TrackerUI/App.config
@@ -4,6 +4,8 @@
   <appSettings>
     <add key="filePath" value ="C:\data\TournamentTracker"/>
     <add key="greaterWins" value ="1"/>
+    <add key="senderEmail" value ="rehaantarzan@gmail.com"/>
+    <add key="senderDisplayName" value ="Rehaan Mazid"/>
   </appSettings>
   
   <connectionStrings>
@@ -12,5 +14,10 @@
     <!-- . in Server takes the default MSSQLSERVER Instance -->
     <add name="Tournaments" connectionString="Server=.;Database=Tournaments;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <system.net>
+    <smtp deliveryMethod="Network">
+      <network host="127.0.0.1" port="25" userName="Rehaan" password="testing" enabledSsl="false"/>
+    </smtp>
+  </system.net>
   
 </configuration>
