feat: event for complete tournament

--- a/TournamentTracker/TrackerUI/App.config
+++ b/TournamentTracker/TrackerUI/App.config
@@ -14,10 +14,10 @@
     <!-- . in Server takes the default MSSQLSERVER Instance -->
     <add name="Tournaments" connectionString="Server=.;Database=Tournaments;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  <system.net>
-    <smtp deliveryMethod="Network">
-      <network host="127.0.0.1" port="25" userName="Rehaan" password="testing" enabledSsl="false"/>
-    </smtp>
-  </system.net>
+  <!-- <system.net> -->
+   <!-- <smtp deliveryMethod="Network"> -->
+     <!-- <network host="127.0.0.1" port="25" userName="Rehaan" password="testing" enabledSsl="false"/> -->
+    <!--</smtp> -->
+  <!--</system.net> -->
   
 </configuration>
